# fastapi-boilerplate-project

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PROGRESS.md  README.md  project_analysis_report.md  pyproject.toml  requirements.txt
archive/: README.md  USECASE_ANALYSIS_AND_REFACTORING.md
prompt/: 0_아키택처_구조변경.md  1_usecase의_명확한정의.md  2_e2e_테스트.md
src/: .env.example  .pre-commit-config.yaml  config.py  container.py  errors.py  main.py  middleware.py  presentation.py
src/app/auth/: container.py  responses.py  routes.py
src/app/auth/domain/: user_entity.py
src/app/auth/endpoint/: __init__.py  login.py  logout.py  refresh_token.py  register.py
src/app/auth/facades/: __init__.py  auth_facade.py
src/app/auth/model/: __init__.py  user_model.py
src/app/auth/repository/: user_repository.py
src/app/auth/services/: __init__.py  auth_facade.py  authentication_service.py  cache_service.py  token_service.py  user_cache_service.py  user_service.py
src/app/auth/usecase/: __init__.py  user_usecase.py
src/app/auth/usecases/: __init__.py  dto.py  (+4 more)
src/app/health/: endpoint.py
src/infrastructure/db/: redis.py  sqlalchemy.py
src/logs/: log.py
src/test/: conftest.py  test_auth.py  test_auth_e2e.py  test_auth_error_scenarios.py  test_auth_workflows.py  test_health.py  test_improvements_demo.py
src/test/docs/: 개선사항_구현_완료.md  개선사항_및_버그리포트.md  테스트_진행_상황.md
src/test/fixtures/: __init__.py  auth_fixtures.py  data_fixtures.py  test_manager.py
src/test/helpers/: __init__.py  auth_helper.py  db_helper.py  redis_helper.py  test_data_generator.py  token_helper.py
(+5 files in other folders)
